# chess-journal

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASING.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  spec.md  tauri-build-error.txt  tsconfig.vitest.json  vercel.json  vite.config.ts  vitest.config.ts
.github/workflows/: android.yml  ci.yml  release.yml
scripts/: build-classics-pgn.mjs  build-openings.mjs  build-puzzles.mjs  bump-version.mjs  bump-version.ps1  cdp-inspect.mjs  emulator-run.sh  fetch-classics.mjs  make-installer-bmp.mjs  patch-android-signing.mjs  patch-android.mjs  validate-classics.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/installer/: SETUP.txt
src-tauri/src/: ai.rs  lib.rs  main.rs
src/components/: AboutModal.tsx  AiSettings.tsx  AssistiveCoach.tsx  Board.tsx  BoardEditor.tsx  Changelog.tsx  ChesscomImport.tsx  ControlBar.tsx  DataActions.tsx  EditorPanel.tsx  EvalBar.tsx  GameReport.tsx  Library.tsx  MetaEditor.tsx  MobileSettings.tsx  MoveHistory.tsx  MoveInput.tsx  OnboardingModal.tsx  OpeningChip.tsx  OpeningStats.tsx  PuzzleList.tsx  PuzzlePanel.tsx  SaveIndicator.tsx  SettingsPanel.tsx  ShortcutsList.tsx  ShortcutsOverlay.tsx  ThemeToggle.tsx  TitleBar.tsx
src/data/: classics-modern.json  classics.ts  openings.json  puzzles.json  puzzles.ts
src/hooks/: useAnalysisCache.ts  useAssistiveMode.ts  useAutoplay.test.ts  useAutoplay.ts  (+18 more)
(+70 files in other folders)
