[package]
name = "chess-journal"
version = "0.1.18"
description = "Your gamebook for chess"
authors = ["sazardev"]
license = "MIT"
repository = "https://github.com/sazardev/chess-journal"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chess_journal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"

# Desktop-only plugins (auto-update + relaunch) plus the local-AI model
# downloader. Not built for Android/iOS (mobile inference uses a native path).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["time"] }
